--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "chromadb>=1.3.5",
+    "dotenv>=0.9.9",
     "mcp>=1.22.0",
     "openai>=2.8.1",
     "tqdm>=4.67.1",
